Todo app ready to use

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav>
-  <div class="fifth grey"></div>
-  <div class="fifth black"></div>
+  <div class="fifth turquoise"></div>
+  <div class="fifth yellow"></div>
   <div class="fifth l-blue"></div>
   <div class="fifth d-blue"></div>
   <div class="fifth red"></div>
