--- a/src/app/navbar/navbar.component.sass
+++ b/src/app/navbar/navbar.component.sass
@@ -1,19 +1,25 @@
+$red: #EF476F;
+$yellow: #FFD166
+$turquoise: #06D6A0
+$l-blue: #118AB2
+$d-blue: #073B4C
+
 nav
 	display: flex
 	.fifth
-		width: 5%
-		height: 4px
+		width: 20%
+		height: 15px
 
-	.grey
-		background-color: #EF476F
-	.black
-		background-color: #FFD166
-	.l-blue
-		background-color: #06D6A0
-	.d-blue
-		background-color: #118AB2
 	.red
-		background-color: #073B4C
+		background-color: $red
+	.yellow
+		background-color: $yellow
+	.turquoise
+		background-color: $turquoise
+	.l-blue
+		background-color: $l-blue
+	.d-blue
+		background-color: $d-blue
 
 
 
